# pve-cli

./: .gitignore  README.md  pve_cp.py  pve_exec.py  pyproject.toml  server.example.txt  test_pve_exec.py
