[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pve-exec"
version = "1.0.0"
description = "Execute commands in a Proxmox VM through QEMU Guest Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.scripts]
pve-exec = "pve_exec:main"
pve-cp = "pve_cp:main"

[tool.setuptools]
py-modules = ["pve_exec", "pve_cp"]
